2009-02-11  Lucas Rocha  <lucasr@gnome.org>

	Bug 565063 – Avoid restarting applications when shutting down

	* gnome-session/gdm-signal-handler.[ch]
	(gdm_signal_handler_set_fatal_func): redefine this function to receive
	custom callback.
	* gnome-session/gsm-manager.[ch]: added gsm_manager_set_phase
	function.
	* gnome-session/main.c: set session manager phase to
	GSM_MANAGER_PHASE_EXIT when gnome-session process is shutting down.
	Patch by Brian Cameron.

2009-02-07  Matthias Clasen  <mclasen@redhat.com>

	* gnome-session/gs-idle-monitor.c (_xsync_alarm_set): Fix a 
	copy-and-paste error in debug output.

2009-02-03  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.91.

==================== 2.25.90 ====================

2009-02-03  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.25.90

2009-01-28  Vincent Untz  <vuntz@gnome.org>

	* doc/dbus/spec-to-docbook.xsl:
	* gnome-session/org.gnome.SessionManager.ClientPrivate.xml: fix
	everything so that the dbus documentation is valid docbook.
	Fix bug #569443.

2009-01-28  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gs-idle-monitor.c: (gs_idle_monitor_reset): fix build
	when the XTest extension is not available.

2009-01-26  Richard Hughes  <richard@hughsie.com>

	* gnome-session/org.gnome.SessionManager.xml:
	Fix up the documentation to mention the session bus, not the
	system bus.

2009-01-23  Vincent Untz  <vuntz@gnome.org>

	* splash/splash-window.c: (layout_icon): fix a crash I had at some
	point.
	(gsm_splash_window_start): use 22x22 icons in the splash

2009-01-22  Vincent Untz  <vuntz@gnome.org>

	* compat/Makefile.am: install autostart desktop files in
	/etc/xdg/autostart

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.90.

==================== 2.25.5 ====================

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.25.5

2009-01-18  William Jon McCann  <jmccann@redhat.com>
