@@ -989,6 +989,65 @@ gsm_consolekit_can_stop (GsmConsolekit *manager)
 #endif
 }
 
+gchar *
+gsm_consolekit_get_current_session_type (GsmConsolekit *manager)
+{
+	DBusConnection *connection;
+	DBusError error;
+	DBusMessage *message = NULL;
+	DBusMessage *reply = NULL;
+	gchar *session_id;
+	gchar *ret;
+	DBusMessageIter iter;
+	const char *value;
+
+	session_id = NULL;
+	ret = NULL;
+
+	connection = dbus_g_connection_get_connection (manager->priv->dbus_connection);
+	if (!get_current_session_id (connection, &session_id)) {
+		goto out;
+	}
+
+	dbus_error_init (&error);
+	message = dbus_message_new_method_call (CK_NAME,
+						session_id,
+						CK_SESSION_INTERFACE,
+						"GetSessionType");
+	if (message == NULL) {
+		goto out;
+	}
+
+	reply = dbus_connection_send_with_reply_and_block (connection,
+							   message,
+							   -1,
+							   &error);
+
+	if (reply == NULL) {
+		if (dbus_error_is_set (&error)) {
+			g_warning ("Unable to determine session type: %s", error.message);
+			dbus_error_free (&error);
+		}
+		goto out;
+	}
+
+	dbus_message_iter_init (reply, &iter);
+	dbus_message_iter_get_basic (&iter, &value);
+	ret = g_strdup (value);
+
+out:
+	if (message != NULL) {
+		dbus_message_unref (message);
+	}
+	if (reply != NULL) {
+		dbus_message_unref (reply);
+	}
+	g_free (session_id);
+
+	return ret;
+}
+
+
 GsmConsolekit *
 gsm_get_consolekit (void)
 {
